# r2r-ctd

./: .gitignore  CHANGELOG.md  CITATION.cff  HOW_TO_RELEASE.md  README.md  pyproject.toml
.github/workflows/: build-docs.yml
docs/: companion_container.md  conf.py  index.md  installing.md  running.md
src/r2r_ctd/: __init__.py  __main__.py  accessors.py  breakout.py  checks.py  derived.py  docker_ctl.py  exceptions.py  maps.py  reporting.py  state.py
src/r2r_ctd/sbe/: __init__.py  batch.txt  binavg.psa  binavg_template.xml  derive_1pr.psa  derive_2pr.psa  derive_template.xml  sensors.txt
