[project]
name = "r2r-ctd"
dynamic = ["version"]
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Andrew Barna", email = "abarna@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "click>=8.2.0",
    "docker>=7.1.0",
    "lxml>=5.4.0",
    "odf-sbe>=0.1.0",
    "rich>=14.0.0",
]

[project.scripts]
r2r-ctd = "r2r_ctd.__main__:cli"

[build-system]
requires = ["setuptools>=68", "setuptools_scm>=7"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
fallback_version = "999"

[dependency-groups]
dev = [
    "furo>=2024.8.6",
    "myst-parser>=4.0.1",
    "ruff>=0.12.1",
    "sphinx>=8.2.3",
    "sphinx-autoapi>=3.6.0",
]
